pyspider_orchestration/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pyspider-#uuid#
  name: pyspider-#uuid#
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: pyspider-#uuid#
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
