pyspider_orchestration/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: pyspider-#uuid#
  name: pyspider-#uuid#
spec:
  host: pyspider-#uuid#.service-broker.app.dataos.io
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: pyspider-#uuid#
